--- a/twitter.css
+++ b/twitter.css
@@ -264,6 +264,7 @@ p {
         top: 100px;
         border-radius: 80px;
         font-size: 60px;
+	color: black;
     }
 
     .apple{
@@ -272,6 +273,7 @@ p {
         border-radius: 50px;
         border-radius: 80px;
         font-size: 60px;
+	color: black;
     }
 
     .logo1, .logo2 {
