--- a/twitter.css
+++ b/twitter.css
@@ -84,8 +84,8 @@ body{
     color: rgb(49, 184, 241);
 }
 
-a {
-    color: rgb(72, 153, 172);
+p a {
+    color: rgb(89, 166, 242);
     text-decoration: none;
 }
 
@@ -204,7 +204,8 @@ p {
     .footer{
         top: 2480px;
         height: 10px;
-        align-content: center;      
+        align-content: center;  
+        width: auto;    
     }
 
     body{
@@ -264,6 +265,7 @@ p {
         top: 100px;
         border-radius: 80px;
         font-size: 60px;
+        color: black;
     }
 
     .apple{
@@ -279,6 +281,7 @@ p {
         position: relative;
         right: 25px;
         top: 3px;
+        color: black;
     }
 
     .signIn{
@@ -286,7 +289,7 @@ p {
         width: 1200px;
         height: 150px;
         border-radius: 80px;
-        color: rgb(7, 108, 210);
+        color: rgb(70, 156, 241);
         border-width: 8px;
         border-color: gray;
         font-size: 70px;
@@ -297,6 +300,7 @@ p {
         top: 100px;
         font-size: 43px;
         width: 1200px;
+        
     }
     
     h5{
@@ -312,7 +316,7 @@ p {
         border-radius: 80px;
         color: rgb(248, 249, 251);
         border-width: 8px;
-        background-color: rgb(50, 121, 180);
+        background-color: rgb(90, 162, 220);
         font-size: 60px;
         border-style: none;
     }
