text color changed

--- a/twitter.css
+++ b/twitter.css
@@ -301,7 +301,7 @@ p {
         top: 100px;
         font-size: 43px;
         width: 1200px;
-        
+        color: rgb(7, 150, 227);
     }
     
     h5{
